namespaces/dotnet/grpc-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  type: ClusterIP
  ports:
  - port: 5001
    name: grpc
  selector:
    app: api
