namespaces/dotnet/currency.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: currency
spec:
  hosts:
    - ecb.europa.eu
  http:
  - timeout: 3s
    route:
      - destination:
          host: ecb.europa.eu
        weight: 100
