namespaces/dotnet/web-app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: istio
  name: web
spec:
  backend:
    serviceName: web
    servicePort: 8080
